<resources>
    <string name="app_name">xueshe</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_login">Sign in</string>

    <string name="register">注册</string>
    <string name="login">登录</string>
    <string name="NotGetmember">还没有帐号?注册</string>
    <string name="AlreadyGetmember">已有帐号？登录</string>
    <string name="Email">Email</string>
    <string name="username">昵称</string>
    <string name="Password">密码</string>
    <string name="qqNum">QQ号码</string>
    <string name="telephone">电话号码</string>
    <string name="male">男</string>
    <string name="female">女</string>

    <string name="title_activity_post_item">post_item</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>

    <string name="title_activity_activity">activity</string>

    <string name="title_activity_creat">creatActivity</string>


</resources>
