<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_user_info"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:focusable="false"
    android:gravity="center"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="cn.huas.xueshe.activity.UserInfo">


    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/info_head"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:contentDescription="@string/app_name"
        android:src="@drawable/ic_perm_identity_24dp" />


    <TextView
        android:id="@+id/info_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="sans-serif"
        android:text="@string/username"
        android:textAlignment="center"
        android:textAllCaps="false"
        android:textSize="36sp"
        android:textStyle="normal|bold"
        android:textColor="@color/black" />


    <TextView
        android:id="@+id/info_Email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/Email"
        android:textColor="@color/black"
        android:textAlignment="viewStart"
        android:textSize="30sp"
        android:typeface="normal"
        android:background="@drawable/shape"
        android:textIsSelectable="true" />


    <TextView
        android:id="@+id/info_QQnum"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/qqNum"
        android:textColor="@color/black"
        android:textAlignment="viewStart"
        android:textSize="30sp"
        android:typeface="normal"
        android:background="@drawable/shape"
        android:textIsSelectable="true" />

    <ListView
        android:id="@+id/info_ListView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"></ListView>
</LinearLayout>



