<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_register"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="cn.huas.xueshe.activity.RegisterActivity">

    <LinearLayout
        android:id="@+id/注册"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingLeft="24dp"
        android:paddingRight="24dp"
        android:paddingTop="56dp">


        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="72dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="24dp"
            android:contentDescription="@string/app_name"
            android:src="@mipmap/logo" />

        <!-- Email Label -->
        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:layout_marginTop="8dp">

            <EditText
                android:id="@+id/input_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/Email"
                android:inputType="textEmailAddress" />
        </android.support.design.widget.TextInputLayout>

        <!--  Name Label -->
        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:layout_marginTop="8dp">

            <EditText
                android:id="@+id/input_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/username"
                android:inputType="textCapWords"
                android:textColor="@color/text" />
        </android.support.design.widget.TextInputLayout>


        <!-- Password Label -->
        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:layout_marginTop="8dp">

            <EditText
                android:id="@+id/input_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/Password"
                android:inputType="textPassword"
                android:textColor="@color/text" />
        </android.support.design.widget.TextInputLayout>

        <!--&lt;!&ndash; 电话 &ndash;&gt;-->
        <!--<android.support.design.widget.TextInputLayout-->
        <!--android:layout_width="match_parent"-->
        <!--android:layout_height="wrap_content"-->
        <!--android:layout_marginBottom="8dp"-->
        <!--android:layout_marginTop="8dp">-->

        <!--<EditText-->
        <!--android:id="@+id/telephone"-->
        <!--android:layout_width="match_parent"-->
        <!--android:layout_height="wrap_content"-->
        <!--android:hint="@string/telephone"-->
        <!--android:inputType="textCapWords"-->
        <!--android:textColor="@color/text" />-->
        <!--</android.support.design.widget.TextInputLayout>-->

        <!--<android.support.design.widget.TextInputLayout-->
        <!--android:layout_width="match_parent"-->
        <!--android:layout_height="wrap_content"-->
        <!--android:layout_marginBottom="8dp"-->
        <!--android:layout_marginTop="8dp">-->

        <!--<EditText-->
        <!--android:id="@+id/qqNum"-->
        <!--android:layout_width="match_parent"-->
        <!--android:layout_height="wrap_content"-->
        <!--android:hint="@string/qqNum"-->
        <!--android:inputType="textCapWords"-->
        <!--android:textColor="@color/text" />-->
        <!--</android.support.design.widget.TextInputLayout>-->

        <!--&lt;!&ndash;QQ &ndash;&gt;-->
        <!--<LinearLayout-->
        <!--android:layout_width="match_parent"-->
        <!--android:layout_height="wrap_content"-->
        <!--android:layout_gravity="center_vertical"-->
        <!--android:layout_weight="1"-->
        <!--android:orientation="horizontal">-->

        <!--<RadioGroup-->
        <!--android:id="@+id/sexRadioGroup"-->
        <!--android:layout_width="match_parent"-->
        <!--android:layout_height="wrap_content"-->
        <!--android:orientation="horizontal"-->
        <!--&gt;-->

        <!--<RadioButton-->
        <!--android:id="@+id/radioMale"-->
        <!--android:layout_width="match_parent"-->
        <!--android:layout_height="wrap_content"-->
        <!--android:checked="true"-->
        <!--android:text="@string/male"-->
        <!--android:textSize="18sp"-->
        <!--android:layout_weight="1"-->
        <!--style="@style/Widget.AppCompat.CompoundButton.RadioButton"/>-->

        <!--<RadioButton-->
        <!--android:id="@+id/radioFemale"-->
        <!--android:layout_width="match_parent"-->
        <!--android:layout_height="wrap_content"-->
        <!--android:text="@string/female"-->
        <!--android:textSize="18sp"-->
        <!--android:layout_weight="1"-->
        <!--style="@style/Widget.AppCompat.CompoundButton.RadioButton"/>-->

        <!--</RadioGroup>-->

        <!--</LinearLayout>-->

        <Button
            android:id="@+id/btn_registerUp"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="24dp"
            android:layout_marginTop="24dp"
            android:background="@color/colorPrimary"
            android:onClick="registerUp"
            android:padding="12dp"
            android:text="注册" />

        <TextView
            android:id="@+id/link_login"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="24dp"
            android:gravity="center"
            android:onClick="toLoginaActivity"
            android:text="@string/AlreadyGetmember"
            android:textSize="16sp" />
    </LinearLayout>
</ScrollView>
